--- a/style.css
+++ b/style.css
@@ -98,8 +98,6 @@ background-color: purple;
 	
 }
 
-
-
 #login_button
 {
 	width: 20%;
@@ -109,9 +107,15 @@ background-color: purple;
 {
 	background-color: blue;
 }
-
-#Roomame
+.color_white
+{
+	color: white
+}
+#Rommame
 {
 	width: 50%;
 }
-
+#output
+{
+	padding: 10px; width:80%;background: rgba(255,255,255,0.8);border-radius: 15px;
+}
